--- a/12-services.yaml
+++ b/12-services.yaml
@@ -8,7 +8,7 @@ spec:
     module: backend
     environment: dev
   ports:
-  - name: nginx-svc-port
+  - name: nginx-svc-port  #svc==service
     protocol: TCP
     port: 80 # service port
     targetPort: 80 # container port
