--- a/15-replicaset.yaml
+++ b/15-replicaset.yaml
@@ -19,5 +19,5 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: php-redis
-        image: us-docker.pkg.dev/google-samples/containers/gke/gb-frontend:v5
+      - name: nginx
+        image: nginx
