--- a/15-replicaset.yaml
+++ b/15-replicaset.yaml
@@ -24,7 +24,7 @@ spec:
 
 ---
 kind: Service
-apVersion: v1
+apiVersion: v1
 metadata:
   name: nginx
 spec:
@@ -34,6 +34,6 @@ spec:
   ports:
   - name: nginx-svc-port
     protocol: TCP
-    port: 80
-    targetport: 80
+    port: 80 # service port
+    targetPort: 80 # container port
 
