--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -1,3 +1,4 @@
+#  PV/storage
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -12,7 +13,7 @@ spec:
     fsType: ext4
     volumeHandle: vol-0e6731be4148b6a4f
 ---
-# request for storage
+# claim/request for storage
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -25,26 +26,27 @@ spec:
   resources:
     requests:
       storage: 5Gi
-# ---
-# apiVersion: v1
-# kind: Pod
-# metadata:
-#   name: ebs-static
-#   labels:
-#     purpose: ebs-static
-# spec:
-#   nodeSelector:
-#     topology.kubernetes.io/zone: us-east-1d
-#   containers:
-#   - name: nginx
-#     image: nginx
-#     volumeMounts: # docker run -v hostpath:contaierpath
-#     - name: ebs-static
-#       mountPath: /usr/share/nginx/html
-#   volumes:
-#   - name: ebs-static
-#     persistentVolumeClaim:
-#       claimName: ebs-static
+---
+# Pod gets the storage through the pvc from pv
+apiVersion: v1
+kind: Pod
+metadata:
+  name: ebs-static
+  labels:
+    purpose: ebs-static
+spec:
+  nodeSelector:
+    topology.kubernetes.io/zone: us-east-1b
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts: # docker run -v hostpath:contaierpath
+    - name: ebs-static
+      mountPath: /usr/share/nginx/html
+  volumes:
+  - name: ebs-static
+    persistentVolumeClaim:
+      claimName: ebs-static
 # ---
 # kind: Service
 # apiVersion: v1
