--- a/volumes/03-ebs-dynamic.yaml
+++ b/volumes/03-ebs-dynamic.yaml
@@ -39,7 +39,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    purpose: ebs-stadynamictic
+    purpose: ebs-dynamic
   ports:
   - name: nginx-svc-port
     protocol: TCP
