--- a/volumes/03-ebs-dynamic.yaml
+++ b/volumes/03-ebs-dynamic.yaml
@@ -28,7 +28,7 @@ spec:
     - name: ebs-dynamic
       mountPath: /usr/share/nginx/html
   volumes:
-  - name: ebs-static
+  - name: ebs-dynamic
     persistentVolumeClaim:
       claimName: ebs-dynamic
 ---
