--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -40,7 +40,7 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    volumeMounts: # docker run -v hostpath:contaierpath
+    volumeMounts: # docker run -v hostpath:containerpath
     - name: ebs-static
       mountPath: /usr/share/nginx/html
   volumes:
